@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-26T16:22:16Z",
+  "timestamp" : "2022-08-27T16:19:59Z",
   "count_outdated" : 311,
   "uniques_outdated" : 160,
-  "count" : 328,
-  "uniques" : 171,
+  "count" : 329,
+  "uniques" : 172,
   "clones" : [
     {
       "timestamp": "2022-08-17T00:00:00Z",
@@ -65,6 +65,13 @@
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
