@@ -1,5 +1,5 @@
 {
-  "count": 17,
+  "count": 18,
   "uniques": 4,
   "clones": [
     {
@@ -45,6 +45,11 @@
     {
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-27T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
