@@ -1,3 +1,11 @@
+2022-08-27T16:19:59Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2939889542
+* notice: last 14d: unq all: 4 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 160 311 / 171 328
+* notice: next accum: outdated-unq outdated-all / unq all: 160 311 / 172 329
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-27]
+
 2022-08-26T16:22:16Z:
 * notice: last 14d: unq all: 4 17
 * notice: prev accum: outdated-unq outdated-all / unq all: 154 304 / 166 321
